fixing media query visibility

--- a/main.css
+++ b/main.css
@@ -268,6 +268,11 @@ body {
         background-color: transparent;
         background-image: url(Math_Background.png);
     }
+    
+    #answer1, #answer2, #answer3, #answer4, #answer5 {
+        visibility: hidden;
+        display: none;
+    }
 
 }
 
